--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,9 +1,14 @@
 body {
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  
   font-family: "Helvetica", "Lucida Grande", "sans-serif";
   color: #3D3D3D;
 }
 
 h1 {
+  padding: 10px;
   background-color: #e1edf2;
 }
 
@@ -12,8 +17,15 @@ h2 {
 }
 
 figure {
+  margin: 30px;
+  padding: 15px;
+
   text-align: center;
 
   background-color: whitesmoke;
   border: 1px solid lightgrey;
+}
+
+figcaption {
+  margin-top: 10px;
 }
