--- a/css/sobre.css
+++ b/css/sobre.css
@@ -29,3 +29,18 @@ figure {
 figcaption {
   margin-top: 10px;
 }
+
+.matriz-musicdot {
+  width: 550px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.familia-tupfeln {
+  width: 275px;
+  float: right;
+}
+
+figure img {
+  widht: 100%;
+}
