--- a/css/sobre.css
+++ b/css/sobre.css
@@ -7,12 +7,13 @@ body {
   color: #3D3D3D;
 }
 
-h1 {
+.titulo {
   padding: 10px;
+  font-size: 32px;
   background-color: #e1edf2;
 }
 
-h2 {
+.subtitulo {
   border-bottom: 2px solid black;
 }
 
